--- a/grsmu_diplom/grsmu_diplom/templates/base.html
+++ b/grsmu_diplom/grsmu_diplom/templates/base.html
@@ -28,7 +28,7 @@
                 <div class="container-fluid px-0">
                     <a class="navbar-brand" href="/">Главная</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon">⟱</span>
+                    <i class="fa fa-bars" aria-hidden="true"></i>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <a class="nav-link" href="/demo_site/">Кафедры</a>
