--- a/grsmu_diplom/static/css/styles/demo_site/demo_site_detail.css
+++ b/grsmu_diplom/static/css/styles/demo_site/demo_site_detail.css
@@ -177,3 +177,13 @@ BUTTONS
 .btn-check:focus + .btn, .btn:focus {
     box-shadow: none;
 }
+
+@media screen and (max-width: 600px) {
+  #marks {
+    font-size: 60%;
+  }
+
+  #marks small {
+    font-size: 20px;
+  }
+}
